--- a/app/src/main/res/layout/banner_layout_one_pager.xml
+++ b/app/src/main/res/layout/banner_layout_one_pager.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.hualing.rider.widget.pull2refresh.PullToRefreshLayout
+    <com.hualing.htk_merchant.widget.pull2refresh.PullToRefreshLayout
         android:id="@+id/refresher"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,7 +11,7 @@
 
         <include layout="@layout/refresh_head"/>
 
-        <com.hualing.rider.widget.pull2refresh.pullableview.PullableListView
+        <com.hualing.htk_merchant.widget.pull2refresh.pullableview.PullableListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,6 +21,6 @@
 
         <include layout="@layout/load_more"/>
 
-    </com.hualing.rider.widget.pull2refresh.PullToRefreshLayout>
+    </com.hualing.htk_merchant.widget.pull2refresh.PullToRefreshLayout>
 
 </LinearLayout>
