--- a/app/src/main/res/layout/item_new_order.xml
+++ b/app/src/main/res/layout/item_new_order.xml
@@ -12,6 +12,7 @@
         android:layout_height="50dp">
 
         <TextView
+            android:id="@+id/orderNumber_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -34,6 +35,7 @@
                 android:text="下单时间:"/>
 
             <TextView
+                android:id="@+id/orderTime_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="2018-06-01"/>
@@ -45,11 +47,13 @@
             android:layout_height="50dp">
 
             <TextView
+                android:id="@+id/receiptName_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="李天赐"/>
 
             <TextView
+                android:id="@+id/receivingCall_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="13608977126"/>
@@ -61,16 +65,60 @@
             android:layout_height="50dp">
 
             <TextView
+                android:id="@+id/shippingAddress_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="东方金石大厦"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/orderProduct_lv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="807"/>
+                android:text="总计"/>
+
+            <TextView
+                android:id="@+id/paid_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="（已支付）￥"/>
 
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="接单"
+                android:layout_alignParentLeft="true"/>
+
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="拒单"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
