--- a/app/src/main/res/layout/item_new_order_product.xml
+++ b/app/src/main/res/layout/item_new_order_product.xml
@@ -5,4 +5,25 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
+    <TextView
+        android:id="@+id/productName_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"/>
+
+    <TextView
+        android:id="@+id/quantity_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"/>
+
+    <TextView
+        android:id="@+id/price_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"/>
+
 </LinearLayout>
