--- a/app/src/main/res/layout/item_finished_order.xml
+++ b/app/src/main/res/layout/item_finished_order.xml
@@ -29,6 +29,17 @@
             android:layout_height="50dp">
 
             <TextView
+                android:id="@+id/statusCode_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="下单时间:"/>
