--- a/app/src/main/res/layout/activity_main_drawerlayout.xml
+++ b/app/src/main/res/layout/activity_main_drawerlayout.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--主布局-->
     <include layout="@layout/drawer_main"/>
+
+    <!--侧布局-->
+    <include layout="@layout/drawer_left"/>
 
 </android.support.v4.widget.DrawerLayout>
