--- a/app/src/main/res/layout/item_finished_order.xml
+++ b/app/src/main/res/layout/item_finished_order.xml
@@ -121,7 +121,7 @@
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:text="确认"
-                android:layout_alignParentLeft="true"/>
+                android:layout_centerInParent="true"/>
 
         </RelativeLayout>
 
