--- a/app/src/main/res/layout/item_delivery_order.xml
+++ b/app/src/main/res/layout/item_delivery_order.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp">
 
@@ -33,7 +33,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
 
-        </LinearLayout>
+            <Button
+                android:id="@+id/baidu_map"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:text="查看地图"/>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
