--- a/app/src/main/res/layout/item_new_order.xml
+++ b/app/src/main/res/layout/item_new_order.xml
@@ -98,18 +98,54 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="50dp"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="总计"/>
 
             <TextView
                 android:id="@+id/paid_tv"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="（已支付）￥"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="配送方式"/>
+
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical">
+
+                <RadioButton
+                    android:id="@+id/ziXing_rb"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:checked="true"
+                    android:text="自行配送" />
+
+                <RadioButton
+                    android:id="@+id/waiZhao_rb"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="-30dp"
+                    android:layout_marginLeft="130dp"
+                    android:text="外招配送"/>
+
+            </RadioGroup>
 
         </LinearLayout>
 
