--- a/app/src/main/res/layout/drawer_left.xml
+++ b/app/src/main/res/layout/drawer_left.xml
@@ -21,7 +21,7 @@
             android:id="@+id/portrait"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             fresco:placeholderImage="@drawable/default_portrait"
             fresco:actualImageScaleType="fitXY"
             fresco:roundAsCircle="true"/>
