--- a/app/src/main/res/layout/item_delivery_order.xml
+++ b/app/src/main/res/layout/item_delivery_order.xml
@@ -133,6 +133,19 @@
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/receipt_but"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="确认收货"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
+
     </LinearLayout>
 
 </LinearLayout>
