--- a/app/src/main/res/layout/item_finished_order.xml
+++ b/app/src/main/res/layout/item_finished_order.xml
@@ -120,7 +120,7 @@
                 android:id="@+id/confirm_but"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
-                android:text="确认"
+                android:text="删除"
                 android:layout_centerInParent="true"/>
 
         </RelativeLayout>
