--- a/app/src/main/res/layout/viewpager_switcher.xml
+++ b/app/src/main/res/layout/viewpager_switcher.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="3dp"
-        android:text="配送"
+        android:text="配送中"
         android:textColor="@drawable/pager_switcher"
         android:background="@color/pagerSwitcherBg"/>
     <Button
