--- a/app/src/main/res/layout/drawer_left.xml
+++ b/app/src/main/res/layout/drawer_left.xml
@@ -124,6 +124,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/goProductList_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp">
