--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -4,7 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activities.ProductListActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/act_but"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="批量管理"
+                android:layout_alignParentRight="true"/>
+
+            <Button
+                android:id="@+id/off_but"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="下架"
+                android:visibility="invisible"
+                android:layout_toLeftOf="@id/act_but"/>
+
+            <Button
+                android:id="@+id/on_but"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="上架"
+                android:visibility="invisible"
+                android:layout_toLeftOf="@id/off_but"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/product_lv"
