--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -113,7 +113,7 @@
                     android:id="@+id/imgUrl_sdv"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:scaleType="fitXY"/>
 
             </LinearLayout>
@@ -289,6 +289,20 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical" >
 
+                <GridView
+                    android:id="@+id/property_gv"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:columnWidth="150dp"
+                    android:numColumns="2"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" >
+
                 <TextView
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
@@ -307,6 +321,26 @@
                     android:layout_marginRight="15dp"/>
 
             </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/save_but"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:text="保存"
+                    android:layout_alignParentLeft="true"/>
+
+                <Button
+                    android:id="@+id/cancel_but"
+                    android:layout_width="150dp"
+                    android:layout_height="match_parent"
+                    android:text="取消"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
