--- a/app/src/main/res/layout/drawer_left.xml
+++ b/app/src/main/res/layout/drawer_left.xml
@@ -110,6 +110,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/goAddProduct_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp">
