--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -115,6 +116,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_marginRight="20dp"
+                    fresco:placeholderImage="@drawable/uppic"
                     android:scaleType="fitXY"/>
 
             </LinearLayout>
