--- a/app/src/main/res/layout/progress_bar_loading.xml
+++ b/app/src/main/res/layout/progress_bar_loading.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="#999">
+
+    <ProgressBar
+        android:id="@+id/loading_pb"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:indeterminateDrawable="@drawable/loading"
+        android:layout_centerInParent="true"/>
 
     <TextView
+        android:id="@+id/loading_msg_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="加载中"
         android:textColor="#333"
-        android:layout_gravity="center"/>
+        android:layout_marginTop="30dp"
+        android:background="#999"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/loading_pb"/>
 
-</LinearLayout>
+</RelativeLayout>
