--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -184,9 +184,17 @@
                     android:textSize="16sp"
                     android:layout_marginLeft="20dp"/>
 
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="￥"
+                    android:textColor="#000"
+                    android:textSize="20sp"/>
+
                 <EditText
                     android:id="@+id/price_et"
-                    android:layout_width="180dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginRight="15dp"/>
@@ -208,9 +216,17 @@
                     android:textSize="16sp"
                     android:layout_marginLeft="20dp"/>
 
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:text="￥"
+                    android:textColor="#000"
+                    android:textSize="20sp"/>
+
                 <EditText
                     android:id="@+id/priceCanhe_et"
-                    android:layout_width="180dp"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_marginRight="15dp"/>
