--- a/app/src/main/res/layout/drawer_left.xml
+++ b/app/src/main/res/layout/drawer_left.xml
@@ -139,6 +139,21 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/goBillRecord_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="账单记录"
+                android:textColor="@color/black"
+                android:textSize="17sp"/>
+
+        </LinearLayout>
+
         <android.support.v7.widget.CardView
             android:id="@+id/exit_but"
             android:layout_width="match_parent"
