--- a/app/src/main/res/layout/drawer_left.xml
+++ b/app/src/main/res/layout/drawer_left.xml
@@ -154,6 +154,21 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/goBalance_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="提现"
+                android:textColor="@color/black"
+                android:textSize="17sp"/>
+
+        </LinearLayout>
+
         <android.support.v7.widget.CardView
             android:id="@+id/exit_but"
             android:layout_width="match_parent"
