--- a/app/src/main/res/layout/activity_balance.xml
+++ b/app/src/main/res/layout/activity_balance.xml
@@ -25,4 +25,88 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="可提现金额:"/>
+
+        <TextView
+            android:id="@+id/availableBalance_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="提现金额:"/>
+
+        <EditText
+            android:id="@+id/withdrawDepositAmount_et"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/finalMoney_tv"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/confirmTheAmount_but"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="确认金额"/>
+
+        <Button
+            android:id="@+id/updateAmount_but"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="修改金额"
+            android:visibility="gone"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="预计到账时间:"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2小时之内"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/toConfirmWithdrawal_but"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="确认提现"
+            android:layout_centerInParent="true"
+            android:enabled="false"/>
+
+    </RelativeLayout>
+
 </LinearLayout>
